The following compiles fine with no parameters but fails to compile with -std=f95: program fabort implicit none integer :: i1, i2, i3 open(10, status="scratch") write(10,'(a)') "1,2 35" rewind(10) read(10,'(3i9)') i1,i2,i3 if(i1.ne.1) call abort() end $ gfc -std=f95 abort.f /tmp/cc4WFggT.o(.text+0x1a8): In function `MAIN__': abort.f: undefined reference to `abort_' collect2: ld returned 1 exit status
This is most likely a dup of bug 20248 (hopefully I was clear in my email to fortran@, maybe I was not).
Subject: Bug 25149 Author: jvdelisle Date: Tue Nov 29 05:52:57 2005 New Revision: 107655 URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=107655 Log: 2005-11-28 Steven G. Kargl <kargls@comcast.net> PR libgfortran/25149 * intrinsics/abort.c: Add external abort_ to allow linking when invoking -std=f95 in testsuite. Modified: trunk/libgfortran/ChangeLog trunk/libgfortran/intrinsics/abort.c
Subject: Bug 25149 Author: jvdelisle Date: Fri Dec 2 00:38:36 2005 New Revision: 107851 URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=107851 Log: 2005-12-01 Steven G. Kargl <kargls@comcast.net> PR libgfortran/25149 * intrinsics/abort.c: Add external abort_ to allow linking when invoking -std=f95 in testsuite. Modified: branches/gcc-4_1-branch/libgfortran/ChangeLog branches/gcc-4_1-branch/libgfortran/intrinsics/abort.c
Fixed in 4.1 and 4.2
Closing